tests/fail/execfile__builtins__--AttributeError.py
"""'execfile' should not be accessible from __builtins__."""
__builtins__.execfile
